# beach-voley

./: .gitignore  CMakeLists.txt  Constants.h  InitException.cpp  README.md  Tournament.h  help  main.cpp  partner_request
IPCClasses/: Fifo.h  FifoRead.cpp  FifoWrite.cpp  LockFile.cpp  LockFile.h  MemoriaCompartida.h  Pipe.cpp  Semaforo.cpp  Semaforo.h  VectorCompartido.h
IPCClasses/fifo/: Fifo.cpp  Fifo.h  FifoRead.cpp  FifoRead.h  FifoWrite.cpp  FifoWrite.h
IPCClasses/signal/: SIGINT_Handler.h  SIGINT_HandlerForField.h  SIGTERM_Handler.h  SignalHandler.cpp
Logger/: Logger.cpp  Logger.h
config/: Config.cpp  Config.h  ParseException.h
player/: Fifo.cpp  FifoRead.cpp  FifoRead.h  FifoWrite.cpp  FifoWrite.h  PartnerRequester.cpp  PartnerRequester.h  Player.cpp  Player.h
src/: Constants.h  Definitions.h  InitException.cpp  InitException.h  LauncherProcess.cpp  LauncherProcess.h  MonitorMarea.cpp  MonitorMarea.hpp  ResourceHandler.cpp  main.cpp
src/config/: Config.cpp  Config.h  Constants.h  Definitions.h  InvalidConfigException.cpp  InvalidConfigException.h  ParseException.cpp  ParseException.h
src/cons/: Constants.h  Definition.h  Path.h
src/court/: Court.cpp  Court.h  Field.cpp  Field.h
src/ipc/: LockFile.cpp  LockFile.h  Pipe.h  Semaforo.cpp  Semaforo.h  VectorCompartido.h
src/ipc/signal/: SIGINT_Handler.h  SIGINT_HandlerForField.h  SIGTERM_Handler.h
src/logger/: Logger.cpp  Logger.h
src/manager/: Manager.cpp  Manager.h  ManagerProcess.cpp  ManagerProcess.h  MatchMaker.cpp  MatchMaker.h  SecurityGuard.cpp  SecurityGuard.h
src/managers/: Manager.cpp  Manager.h  TournamentBoard.cpp  TournamentBoard.hpp
src/monitor/: TideMonitor.cpp  TideMonitor.h  TideMonitor.hpp
src/player/: PartnerRequester.cpp  PartnerRequester.h  Player.cpp  Player.h  PlayerProcess.cpp  PlayerProcess.h
src/scoreboard/: ScoreBoardProcess.cpp  ScoreBoardProcess.h  Scoreboard_SIGINT_Handler.h
src/stadium/: Field.cpp  Field.h  FieldProcess.cpp  FieldProcess.h  Stadium.cpp  Stadium.h
src/tidemonitor/: TideMonitorProcess.cpp  TideMonitorProcess.h
src/util/: FieldUtils.cpp  FieldUtils.h  FileUtils.h  Logger.cpp  Logger.h  PlayerUtils.cpp  PlayerUtils.h  RandomNumber.cpp  RandomNumber.h  ResourceHandler.cpp  ResourceHandler.h  StringUtils.cpp  StringUtils.h
tests/: catch.hpp
tests/managers/: ManagerTest.cpp
tests/monitor/: TideMonitorTest.cpp
tests/player/: PlayerTest.cpp
tests/stadium/: FieldTest.cpp
util/: RandomNumber.cpp  RandomNumber.hpp  ResourceHandler.cpp  ResourceHandler.h  StringUtils.h
